// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSuitePurchaseCta it renders GSuitePurchaseCta with basic plan 1`] = `
<EmailVerificationGate
  noticeStatus="is-info"
  noticeText="You must verify your email to purchase G Suite."
>
  <div
    className="card is-compact"
  >
    <header
      className="gsuite-purchase-cta__add-google-apps-card-header"
    >
      <h3
        className="gsuite-purchase-cta__add-google-apps-card-product-logo"
      >
        <strong>
          G Suite
        </strong>
      </h3>
    </header>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-product-details"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-description"
      >
        <h2
          className="gsuite-purchase-cta__add-google-apps-card-title"
        >
          Professional email and so much more.
        </h2>
        <p
          className="gsuite-purchase-cta__add-google-apps-card-sub-title"
        >
          We've partnered with Google to offer you email, storage, docs, calendars, and more integrated with your site.
        </p>
        <div
          className="gsuite-purchase-cta__add-google-apps-card-price"
        >
          <h4
            className="gsuite-purchase-cta__add-google-apps-card-price-per-user"
          >
            <span>
              <strong>
                $5
              </strong>
               per user / month
            </span>
          </h4>
          <button
            className="button form-button is-primary"
            locale="en"
            onClick={[Function]}
            type="button"
          >
            Add G Suite
          </button>
          <h5
            className="gsuite-purchase-cta__add-google-apps-card-billing-period"
          >
            $50 billed yearly (2 months free!)
          </h5>
        </div>
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-logos"
      >
        <img
          alt="G Suite Logo"
          src="/calypso/images/g-suite/g-suite.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="card is-compact"
  >
    <GSuitePurchaseFeatures
      domainName=""
      productSlug="gapps"
      type="grid"
    />
    <div
      className="gsuite-purchase-cta__add-google-apps-card-secondary-button"
    >
      <button
        className="button form-button is-primary"
        locale="en"
        onClick={[Function]}
        type="button"
      >
        Add G Suite
      </button>
    </div>
  </div>
</EmailVerificationGate>
`;

exports[`GSuitePurchaseCta it renders GSuitePurchaseCta with business plan 1`] = `
<EmailVerificationGate
  noticeStatus="is-info"
  noticeText="You must verify your email to purchase G Suite."
>
  <div
    className="card is-compact"
  >
    <header
      className="gsuite-purchase-cta__add-google-apps-card-header"
    >
      <h3
        className="gsuite-purchase-cta__add-google-apps-card-product-logo"
      >
        <strong>
          G Suite
        </strong>
        Business
      </h3>
    </header>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="gsuite-purchase-cta__add-google-apps-card-product-details"
    >
      <div
        className="gsuite-purchase-cta__add-google-apps-card-description"
      >
        <h2
          className="gsuite-purchase-cta__add-google-apps-card-title"
        >
          Professional email and so much more.
        </h2>
        <p
          className="gsuite-purchase-cta__add-google-apps-card-sub-title"
        >
          We've partnered with Google to offer you email, storage, docs, calendars, and more integrated with your site.
        </p>
        <div
          className="gsuite-purchase-cta__add-google-apps-card-price"
        >
          <h4
            className="gsuite-purchase-cta__add-google-apps-card-price-per-user"
          >
            <span>
              <strong>
                $5
              </strong>
               per user / month
            </span>
          </h4>
          <button
            className="button form-button is-primary"
            locale="en"
            onClick={[Function]}
            type="button"
          >
            Add G Suite
          </button>
          <h5
            className="gsuite-purchase-cta__add-google-apps-card-billing-period"
          >
            $50 billed yearly (2 months free!)
          </h5>
        </div>
      </div>
      <div
        className="gsuite-purchase-cta__add-google-apps-card-logos"
      >
        <img
          alt="G Suite Logo"
          src="/calypso/images/g-suite/g-suite.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="card is-compact"
  >
    <GSuitePurchaseFeatures
      domainName=""
      productSlug="gapps_unlimited"
      type="grid"
    />
    <div
      className="gsuite-purchase-cta__add-google-apps-card-secondary-button"
    >
      <button
        className="button form-button is-primary"
        locale="en"
        onClick={[Function]}
        type="button"
      >
        Add G Suite
      </button>
    </div>
  </div>
</EmailVerificationGate>
`;
